# chroma-editor

./: .gitignore  .pixi.toml  create_data.py  data_transfer_qdrant.ipynb  pixi.toml  pyproject.toml  selections.json  sync.sh  write_label.ipynb
src/chroma_editor/: app.py
